Fix overflow issue

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 
 body {
     margin: 0;
-    overflow: hidden;
     height: 100vh;
     font-family: Roboto;
     display: flex;
